2002-10-18  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/script.h: Removed unnecessary inclusion
          of vrml97node.h.

2002-10-17  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Use a modelview
          matrix stack instead of undoing transformations by multiplying
          by a transformation's inverse.

2002-10-16  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Use
          JS_ConstructObjectWithArguments when doing so.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Refactored bound Fog node
          stack to FogClass.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Source
          formatting changes.

2002-10-15  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h: Allow Node::initialize to
          throw std::bad_alloc; initialize prototype objects of SF*
          classes in JavaScript; JavaScript SFNode::getProperty should
          return JS_TRUE if no eventOut is found so that the common
          handling code in SpiderMonkey can attempt to handle the
          property.

        * src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/MathUtils.h,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,